PR/49872:Yorick Hardy: sed functions 'i' and 'a' discard leading white space FIxed as suggested, behavior now matches gnu-sed.